--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/poppins": "^5.2.7",
     "i18next": "^25.5.3",
     "react": "^19.1.1",
     "react-country-flag": "^3.1.0",
