--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/poppins": "^5.2.7",
+    "@fontsource/vazirmatn": "^5.2.8",
     "i18next": "^25.5.3",
     "react": "^19.1.1",
     "react-country-flag": "^3.1.0",
